# twmw

./: .gitignore  CMakeLists.txt  keyutils.h  main.cpp  readme.md  types.h  winutils.cpp  winutils.h
src/: main.cpp  types.h  windowManager.cpp  windowManager.h
src/hooks/: injector.cpp  injector.h  wsHook.cpp
src/utils/: keyutils.cpp  keyutils.h  winutils.cpp  winutils.h
